[package]
name = "combined-log-parser"
version = "0.2.0"
edition = "2015"
authors = ["Mark Schmale <m.schmale@uniorg.de>"]

[dependencies]
regex = "1.0.5"
failure = "0.1.2"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"

[dev-dependencies]
criterion = "0.2.5"

[[bench]]
name = "format_parser"
harness = false